tests/errors/string_58/STRI2INT3.src
.IPPcode21

DEFVAR GF@str
DEFVAR GF@int
MOVE GF@str string@
STRI2int GF@int GF@str int@0
